CHORE(ci): Add GitHub Actions workflow to test application
- Create a new workflow file at `.github/workflows/test.yml`.
- Trigger the workflow on pushes and pull requests to the main branch.
- Set up the workflow to run on `ubuntu-latest`.
- Include steps to checkout the code, set up Python 3.11, and install dependencies.
- Add a step to test application imports by running a Python command.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Test application imports
+      env:
+        OPENAI_API_KEY: "dummy-key-for-ci"
       run: |
         python -c "import ai_helper; print('All imports successful')" 
