CHORE: install system deps for CI tests workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libegl1 libxkbcommon0
+        sudo apt-get install -y libegl1-mesa libegl-dev libgl1-mesa-glx libxkbcommon0 libdbus-1-3
 
     - name: Install dependencies
       run: |
@@ -31,5 +31,6 @@ jobs:
     - name: Test application imports
       env:
         OPENAI_API_KEY: "dummy-ci-api-key"
+        QT_QPA_PLATFORM: "offscreen"
       run: |
         python -c "import ai_helper; print('All imports successful')" 
