--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libegl1-mesa libegl-dev libgl1-mesa-glx libxkbcommon0 libdbus-1-3
+        sudo apt-get install -y libegl1 libgl1 libopengl0 libxkbcommon0 libdbus-1-3
 
     - name: Install dependencies
       run: |
